--- a/SportsStore/SportsStore/src/app/store/store.component.html
+++ b/SportsStore/SportsStore/src/app/store/store.component.html
@@ -35,8 +35,8 @@
         </select>
       </div>
       <div class="btn-group float-right">
-        <button *ngFor="let page of getPageNumbers()" (click)="changePage(page)" class="btn btn-outline-primary"
-          [class.active]="page == selectedPage">
+        <button *counter="let page of pageCount" (click)="changePage(page)"  class="btn btn-outline-primary"
+        [class.active]="page == selectedPage">
           {{page}}
         </button>
       </div>
