--- a/SportsStore/SportsStore/src/app/store/store.component.html
+++ b/SportsStore/SportsStore/src/app/store/store.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col bg-dark text-white">
       <a class="navbar-brand">SPORTS STORE</a>
+      <cart-summary></cart-summary>
     </div>
   </div>
   <div class="row">
@@ -23,7 +24,12 @@
             {{ product.price | currency:"USD":"symbol":"2.2-2" }}
           </span>
         </h4>
-        <div class="card-text bg-white p-1">{{product.description}}</div>
+        <div class="card-text bg-white p-1">{{product.description}}
+          <div class="btn-group float-right">
+            <button (click) = addProductToCart(product) class="btn btn-success btn-sm float-right">Add To Cart</button>
+            <button (click) = removeProductFromCart(product) class="btn btn-sm float-right" >Remove from Cart</button>
+          </div>
+        </div>
       </div>
 
       <div class="form-inline float-left mr-1">
