--- a/SportsStore/SportsStore/src/app/store/cart-detail/cart-detail.component.html
+++ b/SportsStore/SportsStore/src/app/store/cart-detail/cart-detail.component.html
@@ -59,8 +59,9 @@
                 <button class="btn btn-primary m-1" routerLink="/store">
                     Continue Shopping
                 </button>
-                <button class="btn btn-secondary m-1" routerLink="/checkout" [disabled]="cart.lines.length == 0">
-                    Checkout
+                <button class="btn btn-secondary m-1" routerLink="/checkout"
+                    [disabled]="cart.lines.length == 0 && connected">
+                    {{ connected ? 'Checkout' : 'Offline' }}
                 </button>
             </div>
         </div>
