--- a/SportsStore/SportsStore/src/app/store/store.component.html
+++ b/SportsStore/SportsStore/src/app/store/store.component.html
@@ -14,6 +14,9 @@
         [class.active]="cat == selectedCategory" (click)="changeCategory(cat)">
         {{cat}}
       </button>
+      <button class="btn btn-block btn-danger m-t-3" routerLink="/admin">
+        Admin
+        </button>
     </div>
 
     <div class="col-9 p-2">
